# OpenGlLeanining

./: CMakeLists.txt  conanfile.txt  config.json
rsrc/shaders/: combined_light_tex.frag  model_loading.frag  model_loading.vert  sampler_cube.frag  sampler_cube.vert  searchlight_text.frag  static_light.frag  texture_shader.frag  thirdd_dir_light_text.frag  thirdd_light.frag  thirdd_light_texture.frag  thirdd_light_texture.vert  thirdd_uniform.vert  thirdd_uniform_material.frag  thirdd_uniform_texture.vert  uniform_shader.frag
src/: GlfwWindow.cpp  GlfwWindow.hpp  Program.hpp  Program1.cpp  Program1.hpp  Program2.cpp  Program2.hpp  Program3.cpp  Program3.hpp  Program4.cpp  Program4.hpp  Program5.cpp  Program5.hpp  Program6.cpp  Program6.hpp  Program7.cpp  Program7.hpp  Program8.cpp  Program8.hpp  ProgramData.hpp  ProjectConstants.hpp  main.cpp
src/constants/: Models.cpp  Models.hpp  Shaders.cpp  Shaders.hpp  Textures.cpp  Textures.hpp
src/figures/: Cube.cpp  Cube.hpp  Drawer.cpp  Drawer.hpp  Primitive.cpp  Primitive.hpp  Rectangle.cpp  Rectangle.hpp  Settings.hpp  Triangle.cpp  Triangle.hpp  Triangles.cpp  Triangles.hpp
src/figures/buffers/: Ebo.hpp  RaiiBuffer.hpp  Vao.hpp  Vbo.cpp  Vbo.hpp
src/figures/shaders/: ShaderProgram.cpp  ShaderProgram.hpp  ShaderSources.hpp
src/figures/shaders/src/: color_shader.vert  inverted.vert  shader.frag  shader.vert  texture_shader.frag  texture_shader.vert  thirdd_uniform_shader.vert
src/figures/textures/: Texture.cpp  Texture.hpp  TextureSources.hpp
src/lib_headears/: glfw.hpp  glm.hpp  stb_image.cpp
src/programs/: AbstractProgram.hpp  Program.cpp  Program.hpp  Program1.hpp  Program10.cpp  Program10.hpp  Program2.hpp  Program3.cpp  Program3.hpp  Program4.cpp  Program4.hpp  Program5.cpp  Program5.hpp  Program6.hpp  Program7.cpp  Program7.hpp  Program8.cpp  Program8.hpp  Program9.cpp  Program9.hpp
src/tools/: CameraController.cpp  CameraController.hpp  Drawer.cpp  Drawer.hpp
src/tools/lights/: DirectionalLight.cpp  DirectionalLight.hpp  PointLight.cpp  PointLight.hpp  SerializableLight.hpp  SpotLight.cpp  SpotLight.hpp
src/tools/objects/: Camera.cpp  Camera.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp
src/tools/objects/faces/: AbstractPrimitive.hpp  BasePrimitive.cpp  BasePrimitive.hpp  Cube.cpp  Cube.hpp  Plane.cpp  Plane.hpp  Primitive.cpp  Primitive.hpp  Rectangle.cpp  Rectangle.hpp  Settings.hpp  Triangle.cpp  Triangle.hpp
src/tools/objects/faces/buffers/: Ebo.cpp  Ebo.hpp  RaiiBuffer.cpp  RaiiBuffer.hpp  Vao.cpp  Vao.hpp  Vbo.cpp  Vbo.hpp  VboT.cpp  Vertex.cpp  Vertex.hpp
src/tools/objects/figures/: Cube.cpp  Cube.hpp  Drawer.hpp  Primitive.cpp  Primitive.hpp  Rectangle.cpp  Rectangle.hpp  Settings.hpp  Triangle.cpp  Triangle.hpp
src/tools/objects/figures/buffers/: Ebo.cpp  RaiiBuffer.cpp  Vao.cpp
src/tools/objects/figures/shaders/: ShaderProgram.cpp  ShaderProgram.hpp  ShaderSources.hpp
src/tools/objects/figures/textures/: Texture.cpp  TextureSources.hpp
src/tools/objects/textures/: Loader.cpp  Loader.hpp  Texture.cpp  Texture.hpp  TextureWorker.cpp  TextureWorker.hpp
src/tools/shaders/: ShaderProgram.cpp  ShaderProgram.hpp
